--- a/Services/OnlineBookshop.Services.Data/OnlineBookshop.Services.Data.csproj
+++ b/Services/OnlineBookshop.Services.Data/OnlineBookshop.Services.Data.csproj
@@ -13,6 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Hosting.Abstractions" Version="2.2.0" />
     <PackageReference Include="StyleCop.Analyzers" Version="1.2.0-beta.435" PrivateAssets="all">
       <IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
     </PackageReference>
@@ -21,6 +22,7 @@
   <ItemGroup>
     <ProjectReference Include="..\..\Data\OnlineBookshop.Data.Common\OnlineBookshop.Data.Common.csproj" />
     <ProjectReference Include="..\..\Data\OnlineBookshop.Data.Models\OnlineBookshop.Data.Models.csproj" />
+    <ProjectReference Include="..\..\Web\OnlineBookshop.Web.ViewModels\OnlineBookshop.Web.ViewModels.csproj" />
     <ProjectReference Include="..\OnlineBookshop.Services.Mapping\OnlineBookshop.Services.Mapping.csproj" />
   </ItemGroup>
 
