--- a/Web/OnlineBookshop.Web/appsettings.json
+++ b/Web/OnlineBookshop.Web/appsettings.json
@@ -1,6 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.;Database=OnlineBookshop;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=DESKTOP-DQ6KB9N\\SQLEXPRESS;Database=OnlineBookshop;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
