--- a/Web/OnlineBookshop.Web/appsettings.json
+++ b/Web/OnlineBookshop.Web/appsettings.json
@@ -1,6 +1,7 @@
-﻿{
+{
   "ConnectionStrings": {
-    "DefaultConnection": "Server=DESKTOP-DQ6KB9N\\SQLEXPRESS;Database=OnlineBookshop;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=DESKTOP-DQ6KB9N\\SQLEXPRESS;Database=OnlineBookshop;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "ApplicationDbContextConnection": "Server=(localdb)\\mssqllocaldb;Database=OnlineBookshop.Web;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
